# corsocpp_tp_2025

./: CMakeLists.txt  README.md
EX1/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp
EX10/: CMakeLists.txt  binding.cpp  main.cpp
EX11/: CMakeLists.txt  main.cpp
EX2/: CMakeLists.txt  main.cpp  mainv2.cpp
EX3/: CMakeLists.txt  main.cpp
EX4/: CMakeLists.txt  cambio.cpp  cambio2.cpp  cambio3.cpp
EX5/: CMakeLists.txt  main.cpp
EX6/: CMakeLists.txt  main.cpp
EX9/: CMakeLists.txt  main.cpp
S1/: CMakeLists.txt  library.cpp  library.h  main.cpp  main2.cpp
S10/: CMakeLists.txt  final.cpp  main.cpp
S11/: CMakeLists.txt  Employee.cpp  Employee.h  Lecturer.cpp  Lecturer.h  LecturerResearcher.cpp  LecturerResearcher.h  Researcher.cpp  Researcher.h  main.cpp
S12/: CMakeLists.txt  const.cpp  constcastusecase.cpp  dynamic.cpp  reinterpret.cpp  static.cpp
S2/: CMakeLists.txt  main.cpp  references.cpp
S3/: CMakeLists.txt  mainexceptions.cpp  mainmap.cpp  mainvector.cpp
S4/: CMakeLists.txt  fraction.cpp  fraction.h  main.cpp
S5/: CMakeLists.txt  fraction.cpp  fraction.h  literals.cpp  main.cpp
S6/: CMakeLists.txt  main.cpp
S7/: CMakeLists.txt  main.cpp  meeple.cpp  meeple.h
S8/: CMakeLists.txt  main.cpp  main_2.cpp  rvalueref.cpp
S9/: CMakeLists.txt  main.cpp
