cmake_minimum_required(VERSION 3.5)

project(corsocpp_tp_2025 LANGUAGES CXX)

add_subdirectory(S0)
add_subdirectory(S1)
add_subdirectory(EX1)
add_subdirectory(S2)
add_subdirectory(EX2)
add_subdirectory(S3)
add_subdirectory(S4)
add_subdirectory(S5)
add_subdirectory(S6)
add_subdirectory(S7)
add_subdirectory(S8)
add_subdirectory(S9)
add_subdirectory(S10)
add_subdirectory(EX3)
add_subdirectory(EX4)
add_subdirectory(EX5)
add_subdirectory(EX6)
add_subdirectory(EX9)
